Added support for changing the camera stream resulution

--- a/public/index.html
+++ b/public/index.html
@@ -71,6 +71,16 @@
             <div class="col col-xs-12 col-md-10">
                 <button id="camera_stream_button" class="btn btn-success btn-full-width" data-on-value="Disable Camera Stream" data-off-value="Enable Camera Stream">Enable Camera Stream</button>
                 <div id="camera_stream"></div>
+                <select id="camera_resulution">
+			<option value="40x30">40x30</option>
+			<option value="80x60">80x60</option>
+			<option value="160x120">160x120</option>
+			<option value="200x150">200x150</option>
+			<option value="400x300" selected="selected">400x300</option>
+			<option value="800x600">800x600</option>
+			<option value="1024x768">1024x768</option>
+			<option value="2592x1944">2592x1944</option>
+		</select>
             </div>
         </div>
         
