Added mjpeg stream support

--- a/public/index.html
+++ b/public/index.html
@@ -69,7 +69,7 @@
                 <b class="pull-right">Stream</b>
             </div>
             <div class="col col-xs-12 col-md-10">
-                <button id="camera_stream_button" class="btn btn-success btn-full-width" data-on-value="Disable Camera Stream" data-off-value="Enable Camera Stream">Enable Camera Stream</button>
+               <!-- <button id="camera_stream_button" class="btn btn-success btn-full-width" data-on-value="Disable Camera Stream" data-off-value="Enable Camera Stream">Enable Camera Stream</button>
                 <div id="camera_stream"></div>
                 <select id="camera_resulution">
 			<option value="40x30">40x30</option>
@@ -81,7 +81,8 @@
 			<option value="1024x768">1024x768</option>
 			<option value="2592x1944">2592x1944</option>
 		</select>
-            </div>
+            </div> -->
+            <img src="http://192.168.178.29:8080/?action=stream" />
         </div>
         
         <div class="row top-space">
