Added support for better camera stream resulution

--- a/public/index.html
+++ b/public/index.html
@@ -82,7 +82,7 @@
 			<option value="2592x1944">2592x1944</option>
 		</select>
             </div> -->
-            <img src="http://192.168.178.29:8080/?action=stream" />
+            <img src="http://192.168.178.29:8080/?action=stream" style="width:100%;" />
         </div>
         
         <div class="row top-space">
